# cacio-term

./: Cargo.toml  LICENSE  README.md
.forgejo/: pull_request_template.md
.forgejo/workflows/: test.yaml
.github/workflows/: ci.yaml
.woodpecker/: test.yml
.zed/: settings.json
src/: datetime.rs  globals.rs  interface.rs  main.rs
src/audio/: beep.rs  mod.rs
src/render/: tui.rs
src/structs/: alarm.rs  app.rs  mod.rs  modes.rs
src/watchmodes/: alarm.rs  mod.rs
